--- a/farmstory/src/main/resources/templates/admin/index.html
+++ b/farmstory/src/main/resources/templates/admin/index.html
@@ -15,35 +15,7 @@
         <th:block th:include ="/admin/include/header.html"/>
         <main>
             <div class="mainIn">
-                <div class="aside">
-                    <aside>
-                        <div class="sub_title">
-                            <span>주요기능</span>
-                        </div>
-                        <div class="adm_list">
-                            <ul>
-                                <li>상품관리
-                                    <ul>
-                                        <li>상품목록</li>
-                                        <li>상품등록</li>
-                                    </ul>
-                                </li>
-
-                                <li>주문관리
-                                    <ul>
-                                        <li>주문목록</li>
-                                    </ul>
-                                </li>
-                                <li>회원관리
-                                    <ul>
-                                        <li>회원목록</li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </div>
-                    </aside> <!-- aside end-->
-                </div><!-- .aside end-->
-
+                <th:block th:include ="/admin/include/aside.html"/>
                 <div class="section">
                     <section>
                         <div class="main_container">
