--- a/farmstory/src/main/resources/templates/admin/user/list.html
+++ b/farmstory/src/main/resources/templates/admin/user/list.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="sssashortcut icon" href="/./images/fav.ico" type="image/x-icon">
-    <link rel="stylesheet" href="../../css/admin_userlist.css">
+
+    <link rel="stylesheet" th:href="@{/css/style_admin.css}">
     <title>Administrator::user</title>
 </head>
 <body>
@@ -14,35 +15,8 @@
 
         <main>
             <div class="mainIn list">
-                <div class="aside">
-                    <aside>
-                        <div class="sub_title">
-                            <span>주요기능</span>
-                        </div>
-                        <div class="adm_list">
-                            <ul>
-                                <li>상품관리
-                                    <ul>
-                                        <li>상품목록</li>
-                                        <li>상품등록</li>
-                                    </ul>
-                                </li>
-    
-                                <li>주문관리
-                                    <ul>
-                                        <li>주문목록</li>
-                                    </ul>
-                                </li>
-                                <li>회원관리
-                                    <ul>
-                                        <li>회원목록</li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </div>
-                    </aside> <!-- aside end-->
-                </div><!-- .aside end-->
-                
+                <th:block th:include ="./admin/include/aside.html"/>
+
                 <div class="section list">
                     <section>
                         <div class="main_container">
