--- a/farmstory/src/main/resources/templates/croptalk/story.html
+++ b/farmstory/src/main/resources/templates/croptalk/story.html
@@ -25,9 +25,9 @@
                 </div><!-- .aside_cate -->
                 <div class="aside_bg">
                     <ul class="cate_lnb1">
-                        <li> <a href="#" class="lnb1" >농작물이야기</a></li>
-                        <li> <a href="#" class="lnb2" >텃밭가꾸기</a></li>
-                        <li> <a href="#" class="lnb3" >귀농학교</a></li>
+                        <li> <a th:href="@{/croptalk/story?group=crop&cate=1}" class="lnb1" >농작물이야기</a></li>
+                        <li> <a th:href="@{/croptalk/story?group=crop&cate=2}" class="lnb2" >텃밭가꾸기</a></li>
+                        <li> <a th:href="@{/croptalk/story?group=crop&cate=3}" class="lnb3" >귀농학교</a></li>
                     </ul><!-- .cate_lnb -->
                 </div><!-- .aside_bg -->
             </div><!-- .sidebar -->
