--- a/farmstory/src/main/resources/templates/introduction/direction.html
+++ b/farmstory/src/main/resources/templates/introduction/direction.html
@@ -27,8 +27,8 @@
                         </div><!-- .aside_cate -->
                         <div class="aside_bg">
                             <ul class="cate_lnb">
-                                <li> <a href="#">인사말</a></li>
-                                <li> <a href="#">찾아오는길</a></li>
+                                <li> <a th:href="@{/introduction/introduction}" class="lnb1">인삿말</a></li>
+                                <li> <a th:href="@{/introduction/direction}" class="lnb2">찾아오시는길</a></li>
                           
                             </ul><!-- .cate_lnb -->
                         </div><!-- .aside_bg -->
