--- a/farmstory/src/main/resources/templates/introduction/introduction.html
+++ b/farmstory/src/main/resources/templates/introduction/introduction.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" th:href="@{/images/fav.ico}" type="image/x-icon">
     <link rel="stylesheet" th:href="@{/css/reset.css}">
     <link rel="stylesheet" th:href="@{/css/common.css}">
-    <link rel="stylesheet" th:href="@{/css/introduction/introduction.css}">
+    <link rel="stylesheet" th:href="@{/css/introduction/introduction2.css}">
 </head>
 <body>
     <div id="wrapper">
@@ -28,8 +28,8 @@
                         </div><!-- .aside_cate -->
                         <div class="aside_bg">
                             <ul class="cate_lnb1">
-                                <li> <a href="#" class="lnb1">인삿말</a></li>
-                                <li> <a href="#" class="lnb2">찾아오시는길</a></li>
+                                <li> <a th:href="@{/introduction/introduction}" class="lnb1">인삿말</a></li>
+                                <li> <a th:href="@{/introduction/direction}" class="lnb2">찾아오시는길</a></li>
                             </ul><!-- .cate_lnb -->
                         </div><!-- .aside_bg -->
                     </div><!-- .sidebar -->
