--- a/farmstory/src/main/resources/templates/admin/order/list.html
+++ b/farmstory/src/main/resources/templates/admin/order/list.html
@@ -3,58 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/../FarmStory_team2/css/admin_orderlist.css">
+    <link rel="stylesheet" th:href="@{/css/style_admin.css}">
     <title>PRODUCT::LIST</title>
 </head>
 <body>
     <!-- wrapper -->
     <div id="wrapper">
-        <header>
-            <div class="headerIn">
-                <div class="top">
-                   <h1> <img src="../../../static/adminImages/admin_logo.jpg" alt="Administrator logo"></h1>
-                </div>
-                <div class="utill">
-                    <ul>
-                        <li><a href="#" class="util_home">HOME</a></li>
-                        <li><a href="#" class="util_logout">로그아웃</a></li>
-                        <li><a href="#" class="util_cs">고객센터</a></li>
-                    </ul>
-                </div>
-            </div><!--headerIn end-->
-        </header><!--header end-->
+        <th:block th:include ="/admin/include/header.html"/>
 
         <main>
             <div class="mainIn list">
-                <div class="aside">
-                    <aside>
-                        <div class="sub_title">
-                            <span>주요기능</span>
-                        </div>
-                        <div class="adm_list">
-                            <ul>
-                                <li>상품관리
-                                    <ul>
-                                        <li>상품목록</li>
-                                        <li>상품등록</li>
-                                    </ul>
-                                </li>
-    
-                                <li>주문관리
-                                    <ul>
-                                        <li>주문목록</li>
-                                    </ul>
-                                </li>
-                                <li>회원관리
-                                    <ul>
-                                        <li>회원목록</li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </div>
-                    </aside> <!-- aside end-->
-                </div><!-- .aside end-->
-                
+                <th:block th:include ="/admin/include/aside.html"/>
                 <div class="section list">
                     <section>
                         <div class="main_container">
