--- a/farmstory/src/main/resources/templates/admin/product/register.html
+++ b/farmstory/src/main/resources/templates/admin/product/register.html
@@ -13,35 +13,7 @@
 
         <main>
             <div class="mainIn register">
-                <div class="aside">
-                    <aside>
-                        <div class="sub_title">
-                            <span>주요기능</span>
-                        </div>
-                        <div class="adm_list">
-                            <ul>
-                                <li>상품관리
-                                    <ul>
-                                        <li>상품목록</li>
-                                        <li>상품등록</li>
-                                    </ul>
-                                </li>
-    
-                                <li>주문관리
-                                    <ul>
-                                        <li>주문목록</li>
-                                    </ul>
-                                </li>
-                                <li>회원관리
-                                    <ul>
-                                        <li>회원목록</li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </div>
-                    </aside> <!-- aside end-->
-                </div><!-- .aside end-->
-                
+                <th:block th:include ="/admin/include/aside.html"/>
                 <div class="section list">
                     <section>
                         <form action="#" method="post">
