--- a/farmstory/src/main/resources/templates/croptalk/returnfarm.html
+++ b/farmstory/src/main/resources/templates/croptalk/returnfarm.html
@@ -37,9 +37,9 @@
                         <img src="../images/head_menu_badge.png" alt="30%" class="discount"/>
                         <img src="../images/head_menu2.png" alt="장보기">
                     </a></li>
-                    <li><a href="#"><img src="../images/head_menu3.png" alt="농작물이야기"></a></li>
-                    <li><a href="#"><img src="../images/head_menu4.png" alt="이벤트"></a></li>
-                    <li><a href="#"><img src="../images/head_menu5.png" alt="커뮤니티"></a></li>
+                    <li> <a th:href="@{/croptalk/story?group=crop&cate=1}" class="lnb1" >농작물이야기</a></li>
+                    <li> <a th:href="@{/croptalk/story?group=crop&cate=2}" class="lnb2" >텃밭가꾸기</a></li>
+                    <li> <a th:href="@{/croptalk/story?group=crop&cate=3}" class="lnb3" >귀농학교</a></li>
                 </ul><!-- .gnb -->
             </nav><!-- .gnb_wrap -->
         </div><!-- .headerIn -->
