--- a/farmstory/src/main/resources/templates/include/header.html
+++ b/farmstory/src/main/resources/templates/include/header.html
@@ -20,12 +20,12 @@
         <nav class="gnb_wrap">
             <ul class="gnb">
                 <li><a th:href="@{/introduction/introduction}"><img th:src="@{/images/head_menu1.png}" alt="팜스토리소개"></a></li>
-                <li><a th:href="@{/market/cart}">
+                <li><a th:href="@{/market/list}">
                     <img th:src="@{/images/head_menu_badge.png}" alt="30%" class="discount"/>
                     <img th:src="@{/images/head_menu2.png}" alt="장보기">
                 </a></li>
                 <li><a th:href="@{/croptalk/story}"><img th:src="@{/images/head_menu3.png}" alt="농작물이야기"></a></li>
-                <li><a th:href="@{/event/info}"><img th:src="@{/images/head_menu4.png}" alt="이벤트"></a></li>
+                <li><a th:href="@{/event/event}"><img th:src="@{/images/head_menu4.png}" alt="이벤트"></a></li>
                 <li><a th:href="@{/croptalk/story}"><img th:src="@{/images/head_menu5.png}" alt="커뮤니티"></a></li>
             </ul><!-- .gnb -->
         </nav><!-- .gnb_wrap -->
