--- a/farmstory/src/main/resources/templates/market/list.html
+++ b/farmstory/src/main/resources/templates/market/list.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>상품목록</title>
-    <link rel="shortcut icon" href="../images/fav.ico" type="image/x-icon">
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/common.css">
-    <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/style_market_list.css">
+    <link rel="shortcut icon" th:href="@{/images/fav.ico}" type="image/x-icon">
+    <link rel="stylesheet" th:href="@{/css/reset.css}">
+    <link rel="stylesheet" th:href="@{/css/common.css}">
+    <link rel="stylesheet" th:href="@{/css/style_market_list.css}">
 </head>
 <body>
     <div id="wrapper">
@@ -75,7 +73,7 @@
                                 <tr>
                                     <td class="pic"><img src="../images/market_item1.jpg" alt="사과 500g"></td>
                                     <td class="type">과일</td>
-                                    <td class="pro_name">사과 500g</td>
+                                    <td class="pro_name"><a th:href="@{/market/view}">사과 500g</td>
                                     <td class="sale">10%</td>
                                     <td class="point">400P</td>
                                     <td class="price"><strong>3,600원</strong><span class="original_price">4,000원</span></td>
