--- a/farmstory/src/main/resources/templates/index.html
+++ b/farmstory/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FarmStory</title>
-    <link rel="sssashortcut icon" href="/images/fav.ico" type="image/x-icon">
+    <link rel="sssashortcut icon" th:href="@{/images/fav.ico}" type="image/x-icon">
     <link rel="stylesheet" th:href="@{/css/index.css}">
 </head>
 <body>
