--- a/farmstory/src/main/resources/templates/event/event.html
+++ b/farmstory/src/main/resources/templates/event/event.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>이벤트</title>
-    <!-- <link rel="shortcut icon" href="../images/fav.ico" type="image/x-icon"> -->
+    <link rel="shortcut icon" th:href="@{/images/fav.ico}" type="image/x-icon">
     <link rel="stylesheet" th:href="@{/css/event.css}">
     <link rel="stylesheet" th:href="@{/css/reset.css}">
     <link rel="stylesheet" th:href="@{/css/common.css}">
