--- a/farmstory/src/main/resources/templates/admin/product/register.html
+++ b/farmstory/src/main/resources/templates/admin/product/register.html
@@ -79,26 +79,26 @@
                                                     <div class="file_group">
                                                         <label for="product_list_image">상품목록 이미지(약 120 × 120)</label>
                                                         <div class="cf_input">
-                                                            <input type="file" class="ci" id="product_list_image" name="product_list_image"/>
+                                                            <input type="file" class="ci" id="product_list_image" name="image"/>
                                                             <span>Choose File</span><p>No file chosen</p>
                                                         </div>
                                                     </div>
 
-                                                    <div class="file_group">
-                                                        <label for="basic_info_image">기본정보 이미지(약 240 × 240)</label>
-                                                        <div class="cf_input">
-                                                            <input type="file" id="basic_info_image" name="basic_info_image"/>
-                                                            <span>Choose File</span><p>No file chosen</p>
-                                                        </div>
-                                                    </div>
+<!--                                                    <div class="file_group">-->
+<!--                                                        <label for="basic_info_image">기본정보 이미지(약 240 × 240)</label>-->
+<!--                                                        <div class="cf_input">-->
+<!--                                                            <input type="file" id="basic_info_image" name="basic_info_image"/>-->
+<!--                                                            <span>Choose File</span><p>No file chosen</p>-->
+<!--                                                        </div>-->
+<!--                                                    </div>-->
 
-                                                    <div class="file_group">
-                                                        <label for="product_description_image">상품설명 이미지(약 750 × Auto)</label>
-                                                        <div class="cf_input">
-                                                            <input type="file" id="product_description_image" name="product_description_image"/>
-                                                            <span>Choose File</span><p>No file chosen</p>
-                                                        </div>
-                                                    </div>
+<!--                                                    <div class="file_group">-->
+<!--                                                        <label for="product_description_image">상품설명 이미지(약 750 × Auto)</label>-->
+<!--                                                        <div class="cf_input">-->
+<!--                                                            <input type="file" id="product_description_image" name="product_description_image"/>-->
+<!--                                                            <span>Choose File</span><p>No file chosen</p>-->
+<!--                                                        </div>-->
+<!--                                                    </div>-->
                                                 </div>
                                             </td>
                                         </tr>
