--- a/farmstory/src/main/resources/templates/admin/product/register.html
+++ b/farmstory/src/main/resources/templates/admin/product/register.html
@@ -24,7 +24,7 @@
                                        <input type="text" name="uid" value="A101" >
                                         <tr>
                                             <th>상품명</th>
-                                            <td><input type="text" name="prodName"/></td>
+                                            <td><input type="text" name="prodName" value = "예시"/></td>
                                         </tr>
                                         <tr>
                                             <th>종류</th>
@@ -40,7 +40,7 @@
                                         </tr>
                                         <tr>
                                             <th>가격</th>
-                                            <td><input type="number" name="price"/></td>
+                                            <td><input type="number" name="price" value = "1000"/></td>
                                         </tr>
                                         <tr>
                                             <th>포인트</th>
@@ -66,7 +66,7 @@
                                         </tr>
                                         <tr>
                                             <th>재고</th>
-                                            <td><input type="number" name="stock"/></td>
+                                            <td><input type="number" name="stock" value = "1000"/></td>
                                         </tr>
                                         <tr>
                                             <th>상품이미지</th>
