--- a/farmstory/src/main/resources/templates/market/list.html
+++ b/farmstory/src/main/resources/templates/market/list.html
@@ -73,7 +73,7 @@
                                 <tr>
                                     <td class="pic"><img src="../images/market_item1.jpg" alt="사과 500g"></td>
                                     <td class="type">과일</td>
-                                    <td class="pro_name"><a th:href="@{/market/view}">사과 500g</td>
+                                    <td class="pro_name"><a th:href="@{/market/view?prodId=14}">사과 500g</td>
                                     <td class="sale">10%</td>
                                     <td class="point">400P</td>
                                     <td class="price"><strong>3,600원</strong><span class="original_price">4,000원</span></td>
